# doPop

./: README.md  index.html  package-lock.json  package.json
.cursor/rules/: base.mdc  macos.mdc  paths.mdc
src/: App.css  App.tsx  Types.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
