[package]
name = "doPOP"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

window-vibrancy = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
